--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "                    \"Ftspoint\": \"FLANN\"\n",
     "                    }\n",
     "METHODS_DICT = {\"t\": \"T\", \"\":\"\"}\n",
-    "INDEX_CATEGORYS = [\"MATCHING_NUM\", \"MATCHING_SCORE\", \"MEAN_MATCHING_ACCURCY\"]\n",
+    "INDEX_CATEGORYS = [\"FP_NUM\", \"MATCHING_NUM\", \"MATCHING_SCORE\", \"MEAN_MATCHING_ACCURCY\"]\n",
     "\n",
     "\n",
     "def read_csv_data(file_path):\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,179 +62,236 @@
      "output_type": "stream",
      "text": [
       "500\n",
+      "FP_NUM\n",
+      " Proposed 494.926\n",
+      " orb 497.6875\n",
+      "t orb 497.56189903846155\n",
+      " sphorb 508.6416266025641\n",
+      " sift 498.80471584038696\n",
+      "t sift 499.57634669906844\n",
+      " spoint 497.0752\n",
+      " alike 498.13930148534723\n",
+      "t alike 488.3214\n",
       "MATCHING_NUM\n",
-      " Proposed 112.1876\n",
+      " Proposed 112.1828\n",
       " orb 65.59895833333333\n",
       "t orb 82.0849358974359\n",
       " sphorb 79.8016826923077\n",
       " sift 31.790407093913746\n",
       "t sift 52.51478331308222\n",
-      " spoint 26.9516\n",
-      " alike 76.71015656362907\n",
-      "t alike 69.8012\n",
+      " spoint 26.9468\n",
+      " alike 76.70533922119631\n",
+      "t alike 69.7964\n",
       "MATCHING_SCORE\n",
-      " Proposed 0.22549397307501345\n",
+      " Proposed 0.22547484956903735\n",
       " orb 0.13135050918518068\n",
       "t orb 0.1643269338840794\n",
       " sphorb 0.15631922076394345\n",
       " sift 0.06365984944633558\n",
       "t sift 0.10508969385308985\n",
-      " spoint 0.05423112351556348\n",
-      " alike 0.15355757811801388\n",
-      "t alike 0.14518502262684851\n",
+      " spoint 0.05421215118354766\n",
+      " alike 0.15354794343314834\n",
+      "t alike 0.14517542262684852\n",
       "MEAN_MATCHING_ACCURCY\n",
-      " Proposed 0.6212508422180953\n",
+      " Proposed 0.6212823241608101\n",
       " orb 0.4465945218117177\n",
       "t orb 0.52169380300867\n",
       " sphorb 0.5132336582162589\n",
       " sift 0.7001364212263743\n",
       "t sift 0.7464196443733977\n",
-      " spoint 0.8754580847382843\n",
-      " alike 0.5339720957751419\n",
-      "t alike 0.5611509198546409\n",
+      " spoint 0.8754895666809991\n",
+      " alike 0.5340036914623307\n",
+      "t alike 0.5611824017973558\n",
+      "FP_NUM\n",
+      " Proposed 494.926\n",
+      " Proposed01 494.926\n",
+      " Proposed1 494.926\n",
+      " Proposed10 494.926\n",
+      " Proposed_un 494.926\n",
+      " Ltspoint 494.926\n",
+      " tspoint 494.926\n",
+      " Ftspoint 494.926\n",
       "MATCHING_NUM\n",
-      " Proposed 112.1876\n",
-      " Proposed01 59.5444\n",
-      " Proposed1 107.234\n",
-      " Proposed10 35.134\n",
-      " Proposed_un 35.134\n",
-      " Ltspoint 37.7732\n",
-      " tspoint 24.1024\n",
-      " Ftspoint 31.8332\n",
+      " Proposed 112.1828\n",
+      " Proposed01 59.4428\n",
+      " Proposed1 107.2124\n",
+      " Proposed10 35.1124\n",
+      " Proposed_un 35.1124\n",
+      " Ltspoint 37.7684\n",
+      " tspoint 24.0976\n",
+      " Ftspoint 31.8284\n",
       "MATCHING_SCORE\n",
-      " Proposed 0.22549397307501345\n",
-      " Proposed01 0.11992620581290289\n",
-      " Proposed1 0.21561002013160113\n",
-      " Proposed10 0.07107075097206518\n",
-      " Proposed_un 0.07107075097206518\n",
-      " Ltspoint 0.07644362134183676\n",
-      " tspoint 0.0487094737513405\n",
-      " Ftspoint 0.06429612137440065\n",
+      " Proposed 0.22547484956903735\n",
+      " Proposed01 0.11956598982506442\n",
+      " Proposed1 0.21552580193975474\n",
+      " Proposed10 0.07098653278021871\n",
+      " Proposed_un 0.07098653278021871\n",
+      " Ltspoint 0.07642449783586067\n",
+      " tspoint 0.0486903502453644\n",
+      " Ftspoint 0.06427699786842456\n",
       "MEAN_MATCHING_ACCURCY\n",
-      " Proposed 0.6212508422180953\n",
-      " Proposed01 0.7847451960868662\n",
-      " Proposed1 0.6423038438309125\n",
-      " Proposed10 0.8272124594645603\n",
-      " Proposed_un 0.8272124594645603\n",
-      " Ltspoint 0.7421607559333928\n",
-      " tspoint 0.9060731686394318\n",
-      " Ftspoint 0.8453807623050797\n",
+      " Proposed 0.6212823241608101\n",
+      " Proposed01 0.7828663003251686\n",
+      " Proposed1 0.641581104289752\n",
+      " Proposed10 0.8264897199233997\n",
+      " Proposed_un 0.8264897199233997\n",
+      " Ltspoint 0.7421922378761077\n",
+      " tspoint 0.9061046505821467\n",
+      " Ftspoint 0.8454122442477947\n",
       "1000\n",
+      "FP_NUM\n",
+      " Proposed 865.2242\n",
+      " orb 994.9831730769231\n",
+      "t orb 994.8575721153846\n",
+      " sphorb 1017.7219551282051\n",
+      " sift 979.8744457879887\n",
+      "t sift 943.5765492102065\n",
+      " spoint 986.0912\n",
+      " alike 985.068245684464\n",
+      "t alike 827.8584\n",
       "MATCHING_NUM\n",
-      " Proposed 181.132\n",
+      " Proposed 181.028\n",
       " orb 113.29847756410257\n",
       "t orb 149.51522435897436\n",
       " sphorb 144.58934294871796\n",
       " sift 49.7658202337767\n",
       "t sift 88.50020251113811\n",
-      " spoint 31.0948\n",
-      " alike 134.9743075070253\n",
-      "t alike 114.2296\n",
+      " spoint 30.9908\n",
+      " alike 134.86993175431553\n",
+      "t alike 114.1256\n",
       "MATCHING_SCORE\n",
-      " Proposed 0.21136418999914544\n",
+      " Proposed 0.2111566051688061\n",
       " orb 0.11338842391351654\n",
       "t orb 0.14960486526929492\n",
       " sphorb 0.14150944389075645\n",
       " sift 0.05095336701349514\n",
       "t sift 0.09456466327613965\n",
-      " spoint 0.03151632723201271\n",
-      " alike 0.13741185828026606\n",
-      "t alike 0.15454992732563508\n",
+      " spoint 0.031309567788672756\n",
+      " alike 0.1373074825275563\n",
+      "t alike 0.15442567404009147\n",
       "MEAN_MATCHING_ACCURCY\n",
-      " Proposed 0.6287612272376789\n",
+      " Proposed 0.629581384717994\n",
       " orb 0.3979899511052097\n",
       "t orb 0.48748352163677255\n",
       " sphorb 0.488966080758299\n",
       " sift 0.6671280762726847\n",
       "t sift 0.7352422134368435\n",
-      " spoint 0.8824857760395364\n",
-      " alike 0.5153547167282867\n",
-      "t alike 0.5741084315782485\n",
+      " spoint 0.8833059335198515\n",
+      " alike 0.516177837443175\n",
+      "t alike 0.5749285890585636\n",
+      "FP_NUM\n",
+      " Proposed 865.2242\n",
+      " Proposed01 865.2242\n",
+      " Proposed1 865.2242\n",
+      " Proposed10 865.2242\n",
+      " Proposed_un 865.2242\n",
+      " Ltspoint 865.2242\n",
+      " tspoint 865.2242\n",
+      " Ftspoint 865.2242\n",
       "MATCHING_NUM\n",
-      " Proposed 181.132\n",
-      " Proposed01 114.0272\n",
-      " Proposed1 177.8912\n",
-      " Proposed10 44.5428\n",
-      " Proposed_un 44.5428\n",
-      " Ltspoint 62.1152\n",
-      " tspoint 29.36\n",
-      " Ftspoint 42.0332\n",
+      " Proposed 181.028\n",
+      " Proposed01 113.81\n",
+      " Proposed1 177.8204\n",
+      " Proposed10 44.472\n",
+      " Proposed_un 44.472\n",
+      " Ltspoint 62.0112\n",
+      " tspoint 29.256\n",
+      " Ftspoint 41.9292\n",
       "MATCHING_SCORE\n",
-      " Proposed 0.21136418999914544\n",
-      " Proposed01 0.1315982525659867\n",
-      " Proposed1 0.20787145826222064\n",
-      " Proposed10 0.05335886960284312\n",
-      " Proposed_un 0.05335886960284312\n",
-      " Ltspoint 0.0783444107883212\n",
-      " tspoint 0.03498386214101349\n",
-      " Ftspoint 0.05049606198618051\n",
+      " Proposed 0.2111566051688061\n",
+      " Proposed01 0.1311731389028536\n",
+      " Proposed1 0.20773157615620402\n",
+      " Proposed10 0.05321898749682653\n",
+      " Proposed_un 0.05321898749682653\n",
+      " Ltspoint 0.07813682595798188\n",
+      " tspoint 0.03477627731067417\n",
+      " Ftspoint 0.05028847715584119\n",
       "MEAN_MATCHING_ACCURCY\n",
-      " Proposed 0.6287612272376789\n",
-      " Proposed01 0.7670975428585202\n",
-      " Proposed1 0.6402444887631111\n",
-      " Proposed10 0.8432490563493735\n",
-      " Proposed_un 0.8432490563493735\n",
-      " Ltspoint 0.7338506882303766\n",
-      " tspoint 0.9103897672899395\n",
-      " Ftspoint 0.8743509483965274\n",
+      " Proposed 0.629581384717994\n",
+      " Proposed01 0.7657944808198875\n",
+      " Proposed1 0.6394018913605136\n",
+      " Proposed10 0.842406458946776\n",
+      " Proposed_un 0.842406458946776\n",
+      " Ltspoint 0.7346708457106915\n",
+      " tspoint 0.9112099247702543\n",
+      " Ftspoint 0.8751711058768422\n",
       "10000\n",
+      "FP_NUM\n",
+      " Proposed 969.897\n",
+      " orb 7728.156650641025\n",
+      "t orb 5921.958533653846\n",
+      " sphorb 8795.47576121795\n",
+      " sift 2272.7299476017733\n",
+      "t sift 1352.0824220332117\n",
+      " spoint 1760.8472\n",
+      " alike 1872.9698916097952\n",
+      "t alike 941.5764917901482\n",
       "MATCHING_NUM\n",
-      " Proposed 200.3236\n",
+      " Proposed 200.2388\n",
       " orb 596.8012820512821\n",
       "t orb 694.2900641025641\n",
       " sphorb 956.7451923076923\n",
       " sift 100.64651350261991\n",
       "t sift 120.4726609963548\n",
-      " spoint 35.1932\n",
-      " alike 851.1469289441991\n",
-      "t alike 703.6411694032839\n",
+      " spoint 35.1084\n",
+      " alike 851.0618225612204\n",
+      "t alike 703.5562675210252\n",
       "MATCHING_SCORE\n",
-      " Proposed 0.20867206687772163\n",
+      " Proposed 0.20850644187772163\n",
       " orb 0.07743915956567905\n",
       "t orb 0.11755437113857421\n",
       " sphorb 0.10756362120956159\n",
       " sift 0.04540621717360341\n",
       "t sift 0.0908922448174217\n",
-      " spoint 0.021051961717490207\n",
-      " alike 0.48198589719932516\n",
-      "t alike 0.8098847519369283\n",
+      " spoint 0.020940382770121786\n",
+      " alike 0.48196706001849765\n",
+      "t alike 0.809868843770869\n",
       "MEAN_MATCHING_ACCURCY\n",
-      " Proposed 0.6311929003816537\n",
+      " Proposed 0.6321420034524957\n",
       " orb 0.3053347337029177\n",
       "t orb 0.41655766442843317\n",
       " sphorb 0.4360760593080917\n",
       " sift 0.6663125923893622\n",
       "t sift 0.7418889453546006\n",
-      " spoint 0.8874657235168594\n",
-      " alike 0.48480219493044574\n",
-      "t alike 0.5427728663725306\n",
+      " spoint 0.8884148265877017\n",
+      " alike 0.48575472711716\n",
+      "t alike 0.5437231097354083\n",
+      "FP_NUM\n",
+      " Proposed 969.897\n",
+      " Proposed01 969.897\n",
+      " Proposed1 969.897\n",
+      " Proposed10 969.897\n",
+      " Proposed_un 969.897\n",
+      " Ltspoint 969.897\n",
+      " tspoint 969.897\n",
+      " Ftspoint 969.897\n",
       "MATCHING_NUM\n",
-      " Proposed 200.3236\n",
-      " Proposed01 130.112\n",
-      " Proposed1 197.1684\n",
-      " Proposed10 44.9788\n",
-      " Proposed_un 44.9788\n",
-      " Ltspoint 300.8092\n",
-      " tspoint 31.4672\n",
-      " Ftspoint 82.0828\n",
+      " Proposed 200.2388\n",
+      " Proposed01 130.0112\n",
+      " Proposed1 197.0796\n",
+      " Proposed10 44.89\n",
+      " Proposed_un 44.89\n",
+      " Ltspoint 300.7244\n",
+      " tspoint 31.3824\n",
+      " Ftspoint 81.998\n",
       "MATCHING_SCORE\n",
-      " Proposed 0.20867206687772163\n",
-      " Proposed01 0.13327750400850083\n",
-      " Proposed1 0.20580954099196733\n",
-      " Proposed10 0.05052154308782754\n",
-      " Proposed_un 0.05052154308782754\n",
-      " Ltspoint 0.34310819792503755\n",
-      " tspoint 0.03417851005162909\n",
-      " Ftspoint 0.09250377823561919\n",
+      " Proposed 0.20850644187772163\n",
+      " Proposed01 0.1331215955594111\n",
+      " Proposed1 0.20567188764768563\n",
+      " Proposed10 0.0503838897435458\n",
+      " Proposed_un 0.0503838897435458\n",
+      " Ltspoint 0.34294257292503755\n",
+      " tspoint 0.03401288505162909\n",
+      " Ftspoint 0.09233815323561918\n",
       "MEAN_MATCHING_ACCURCY\n",
-      " Proposed 0.6311929003816537\n",
-      " Proposed01 0.7681201311530306\n",
-      " Proposed1 0.6409846577719623\n",
-      " Proposed10 0.8500321554751925\n",
-      " Proposed_un 0.8500321554751925\n",
-      " Ltspoint 0.7025514531983201\n",
-      " tspoint 0.9097052500913967\n",
-      " Ftspoint 0.8614324796209832\n"
+      " Proposed 0.6321420034524957\n",
+      " Proposed01 0.7663232228394659\n",
+      " Proposed1 0.6401176195882678\n",
+      " Proposed10 0.8491651172914979\n",
+      " Proposed_un 0.8491651172914979\n",
+      " Ltspoint 0.7035005562691624\n",
+      " tspoint 0.9106543531622389\n",
+      " Ftspoint 0.8623815826918255\n"
      ]
     }
    ],
