--- a/analysis/EDA_makesim.ipynb
+++ b/analysis/EDA_makesim.ipynb
@@ -86,7 +86,7 @@
     "    return pts1, pts2, desc1, desc2\n",
     "\n",
     "\n",
-    "def mnn_mather(desc1, desc2, method=\"mean_std\"):\n",
+    "def mnn_matcher(desc1, desc2, method=\"mean_std\"):\n",
     "    sim = desc1 @ desc2.transpose()\n",
     "    if method == \"mean_std\":\n",
     "        k = 4\n",
@@ -141,7 +141,7 @@
     "        mask = (ids1 == nn21[nn12])\n",
     "        matches = [cv2.DMatch(i, j, 0) for i, j in zip(ids1[mask], nn12[mask])]\n",
     "    elif \"superpoint\" in args_opt:\n",
-    "        matches_idx, sim = mnn_mather(s_desc1, s_desc2)\n",
+    "        matches_idx, sim = mnn_matcher(s_desc1, s_desc2)\n",
     "        matches = [cv2.DMatch(i, j, 0) for i, j in matches_idx]\n",
     "    elif \"sift\" in args_opt:\n",
     "        matches_idx, sim = euclid_matcher(s_desc1, s_desc2)\n",
