--- a/analysis/EDA_makesim.ipynb
+++ b/analysis/EDA_makesim.ipynb
@@ -339,7 +339,7 @@
     "    #    desc2 = normalize_features(desc2)\n",
     "\n",
     "    #print(desc1.shape, desc1)\n",
-    "    pts1, pts2, desc1, desc2 = sort_key(pts1, pts2, desc1, desc2, points)\n",
+    "    pts1, pts2, desc1, desc2, _, _ = sort_key(pts1, pts2, desc1, desc2, points)\n",
     "    t2 = time.time()\n",
     "    print(\"detection:\", t2-t1)\n",
     "    if len(pts1.shape) == 1:\n",
