add superglue and lightglue

--- a/analysis/EDA_makesim.ipynb
+++ b/analysis/EDA_makesim.ipynb
@@ -299,7 +299,7 @@
     "    t0 = time.time()\n",
     "    descriptor = descriptor\n",
     "\n",
-    "    opt, mode, sphered, use_our_method = get_descriptor(descriptor)\n",
+    "    opt, mode, sphered, method_idx = get_descriptor(descriptor)\n",
     "    base_order = 0  # Base sphere resolution\n",
     "    sample_order = 8  # Determines sample resolution (10 = 2048 x 4096)\n",
     "    scale_factor = 1.0  # How much to scale input equirectangular image by\n",
@@ -346,7 +346,7 @@
     "        pts1 = pts1.reshape(1,-1)\n",
     "\n",
     "    print(desc1.shape)\n",
-    "    s_pts1, s_pts2, x1, x2, sim = matched_points(pts1, pts2, desc1, desc2, \"100p\", opt, match, use_new_method=use_our_method)\n",
+    "    s_pts1, s_pts2, x1, x2, sim = matched_points(pts1, pts2, desc1, desc2, \"100p\", opt, match, use_new_method=method_idx)\n",
     "    return sim"
    ]
   },
