--- a/analysis/EDA_makesim.ipynb
+++ b/analysis/EDA_makesim.ipynb
@@ -299,7 +299,8 @@
     "    t0 = time.time()\n",
     "    descriptor = descriptor\n",
     "\n",
-    "    opt, mode, sphered, method_idx = get_descriptor(descriptor)\n",
+    "    opt, mode, sphered = get_descriptor(descriptor)
+method_idx = 0\n",
     "    base_order = 0  # Base sphere resolution\n",
     "    sample_order = 8  # Determines sample resolution (10 = 2048 x 4096)\n",
     "    scale_factor = 1.0  # How much to scale input equirectangular image by\n",
