add ultimate progress method

--- a/test_spherical_coord_convert.ipynb
+++ b/test_spherical_coord_convert.ipynb
@@ -404,162 +404,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([512, 1024, 3])"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adjusted_coords.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[0.0000e+00, 0.0000e+00, 1.0000e+00],\n",
-       "         [0.0000e+00, 6.1419e-03, 1.0000e+00],\n",
-       "         [0.0000e+00, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [0.0000e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         [0.0000e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [0.0000e+00, 6.2832e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[6.1479e-03, 0.0000e+00, 1.0000e+00],\n",
-       "         [6.1479e-03, 6.1419e-03, 1.0000e+00],\n",
-       "         [6.1479e-03, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [6.1479e-03, 6.2709e+00, 1.0000e+00],\n",
-       "         [6.1479e-03, 6.2770e+00, 1.0000e+00],\n",
-       "         [6.1479e-03, 6.2832e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[1.2296e-02, 0.0000e+00, 1.0000e+00],\n",
-       "         [1.2296e-02, 6.1419e-03, 1.0000e+00],\n",
-       "         [1.2296e-02, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [1.2296e-02, 6.2709e+00, 1.0000e+00],\n",
-       "         [1.2296e-02, 6.2770e+00, 1.0000e+00],\n",
-       "         [1.2296e-02, 6.2832e+00, 1.0000e+00]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[3.1293e+00, 0.0000e+00, 1.0000e+00],\n",
-       "         [3.1293e+00, 6.1419e-03, 1.0000e+00],\n",
-       "         [3.1293e+00, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [3.1293e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         [3.1293e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [3.1293e+00, 6.2832e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[3.1354e+00, 0.0000e+00, 1.0000e+00],\n",
-       "         [3.1354e+00, 6.1419e-03, 1.0000e+00],\n",
-       "         [3.1354e+00, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [3.1354e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         [3.1354e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [3.1354e+00, 6.2832e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[3.1416e+00, 0.0000e+00, 1.0000e+00],\n",
-       "         [3.1416e+00, 6.1419e-03, 1.0000e+00],\n",
-       "         [3.1416e+00, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [3.1416e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         [3.1416e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [3.1416e+00, 6.2832e+00, 1.0000e+00]]], device='cuda:0')"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spherical_coords"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[7.8540e-01, 0.0000e+00, 1.0000e+00],\n",
-       "         [7.8540e-01, 6.1419e-03, 1.0000e+00],\n",
-       "         [7.8540e-01, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [7.8540e-01, 1.2284e-02, 1.0000e+00],\n",
-       "         [7.8540e-01, 6.1421e-03, 1.0000e+00],\n",
-       "         [7.8540e-01, 0.0000e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[7.9155e-01, 0.0000e+00, 1.0000e+00],\n",
-       "         [7.9155e-01, 6.1419e-03, 1.0000e+00],\n",
-       "         [7.9155e-01, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [7.7925e-01, 1.2284e-02, 1.0000e+00],\n",
-       "         [7.7925e-01, 6.1421e-03, 1.0000e+00],\n",
-       "         [7.7925e-01, 0.0000e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[7.9769e-01, 0.0000e+00, 1.0000e+00],\n",
-       "         [7.9769e-01, 6.1419e-03, 1.0000e+00],\n",
-       "         [7.9769e-01, 1.2284e-02, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [7.7310e-01, 1.2284e-02, 1.0000e+00],\n",
-       "         [7.7310e-01, 6.1421e-03, 1.0000e+00],\n",
-       "         [7.7310e-01, 0.0000e+00, 1.0000e+00]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[2.3685e+00, 6.2832e+00, 1.0000e+00],\n",
-       "         [2.3685e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [2.3685e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [2.3439e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         [2.3439e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [2.3439e+00, 6.2832e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[2.3623e+00, 6.2832e+00, 1.0000e+00],\n",
-       "         [2.3623e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [2.3623e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [2.3500e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         [2.3500e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [2.3500e+00, 6.2832e+00, 1.0000e+00]],\n",
-       "\n",
-       "        [[2.3562e+00, 6.2832e+00, 1.0000e+00],\n",
-       "         [2.3562e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [2.3562e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         ...,\n",
-       "         [2.3562e+00, 6.2709e+00, 1.0000e+00],\n",
-       "         [2.3562e+00, 6.2770e+00, 1.0000e+00],\n",
-       "         [2.3562e+00, 6.2832e+00, 1.0000e+00]]], device='cuda:0')"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adjusted_coords"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -574,60 +418,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/imonalc/anaconda3/envs/keypoints/lib/python3.7/site-packages/ipykernel_launcher.py:21: RuntimeWarning: invalid value encountered in arcsin\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img = cv2.imread(\"./data/data_100/Room/0/O.png\")\n",
-    "h,w = img.shape[:2]\n",
-    " \n",
-    "w = int(w/2)\n",
-    "h = int(h/2)\n",
-    "\n",
-    "theta, phi = np.meshgrid(np.arange(-np.pi/2, np.pi/2, np.pi/w),\n",
-    "                         np.arange(-np.pi/2, np.pi/2, np.pi/h))\n",
-    " \n",
-    "x = np.cos(phi)*np.cos(theta)\n",
-    "y = np.cos(phi)*np.sin(theta)\n",
-    "z = np.sin(phi)\n",
-    " \n",
-    "rot = np.pi/2\n",
-    "     \n",
-    "xx = x*np.cos(rot) + z*np.sin(rot)\n",
-    "yy = y\n",
-    "zz = -x*np.sin(rot) + z*np.cos(rot)\n",
-    "     \n",
-    "phi = np.arcsin(zz)\n",
-    "theta = np.arcsin(yy / np.cos(phi))\n",
-    "     \n",
-    "Y = (2 * phi / np.pi) * h + h\n",
-    "X = (theta / np.pi) * w + w\n",
-    "     \n",
-    "out = cv2.remap(img, X.astype(np.float32), Y.astype(np.float32), cv2.INTER_LINEAR)\n",
-    "cv2.imwrite(\"dst.jpg\", out)"
+    "img = cv2.imread(\"./data/example/room1/R.png\")\n",
+    "img2 = cv2.resize(img , (1024, 512))\n",
+    "cv2.imwrite(\"./data/example/room3/R.png\" , img2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +449,7 @@
        "True"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,21 +460,21 @@
     "\n",
     "# 画像の読み込み\n",
     "img = cv2.imread(\"./data/data_100/Room/0/O.png\")\n",
-    "img = cv2.imread(\"./data/example/farm2/R.png\")\n",
+    "img = cv2.imread(\"./data/example/room3/O.png\")\n",
     "h, w = img.shape[:2]\n",
     "\n",
     "w_half = int(w / 2)\n",
     "h_half = int(h / 2)\n",
     "\n",
     "# メッシュグリッドの生成\n",
-    "theta, phi = np.meshgrid(np.linspace(-np.pi, np.pi, w_half*2),\n",
+    "phi, theta = np.meshgrid(np.linspace(-np.pi, np.pi, w_half*2),\n",
     "                         np.linspace(-np.pi/2, np.pi/2, h_half*2))\n",
     "\n",
     "\n",
     "# 球面座標\n",
-    "x = np.cos(phi) * np.cos(theta)\n",
-    "y = np.cos(phi) * np.sin(theta)\n",
-    "z = np.sin(phi)\n",
+    "x = np.cos(theta) * np.cos(phi)\n",
+    "y = np.cos(theta) * np.sin(phi)\n",
+    "z = np.sin(theta)\n",
     "\n",
     "# z軸周りにπ/2ラジアン回転\n",
     "rot = np.pi / 2\n",
@@ -670,12 +483,12 @@
     "zz = -x * np.sin(rot) + z * np.cos(rot)\n",
     "\n",
     "# 逆球面座標変換\n",
-    "phi = np.arcsin(zz)\n",
-    "theta = np.arctan2(yy, xx)\n",
+    "theta = np.arcsin(zz)\n",
+    "phi = np.arctan2(yy, xx)\n",
     "\n",
     "# 画像座標へのマッピング\n",
-    "Y = 2*phi / np.pi * h_half + h_half\n",
-    "X = theta / np.pi * w_half + w_half\n",
+    "Y = 2*theta / np.pi * h_half + h_half\n",
+    "X = phi / np.pi * w_half + w_half\n",
     "\n",
     "# 画像のリマッピングと保存\n",
     "out = cv2.remap(img, X.astype(np.float32), Y.astype(np.float32), cv2.INTER_LINEAR, borderMode=cv2.BORDER_WRAP)\n",
@@ -688,6 +501,54 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def equirectangular_to_spherical_coords(img_width, img_height, device='cpu'):\n",
+    "    theta = torch.linspace(0, np.pi, img_height, device=device)  # 0からπ\n",
+    "    phi = torch.linspace(0, 2 * np.pi, img_width, device=device)  # 0から2π\n",
+    "    phi_grid, theta_grid = torch.meshgrid(phi, theta, indexing=\"xy\")\n",
+    "    return torch.stack([theta_grid, phi_grid, torch.ones_like(theta_grid)], dim=-1)\n",
+    "\n",
+    "def is_in_middle_latitude(img_width, img_height, x, y, device='cpu'):\n",
+    "    # 全天球画像の座標から球面座標を取得\n",
+    "    spherical_coords = equirectangular_to_spherical_coords(img_width, img_height, device)\n",
+    "    \n",
+    "    # x, y 座標でのシータの値を取得\n",
+    "    theta_at_xy = spherical_coords[y, x, 0]\n",
+    "    \n",
+    "    # θがπ/4から3π/4の間にあるかチェック\n",
+    "    return np.pi/4 <= theta_at_xy < 3*np.pi/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = is_in_middle_latitude(1024, 512, 0, 0)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
