get good method

--- a/test_spherical_coord_convert.ipynb
+++ b/test_spherical_coord_convert.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/imonalc/anaconda3/envs/keypoints/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,16 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img2 = transform_equirectangular_image(img)"
+    "#img2 = transform_equirectangular_image(img)\n",
+    "img2 = img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +437,7 @@
        "True"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +459,7 @@
        "True"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -548,6 +558,240 @@
    "source": [
     "a = is_in_middle_latitude(1024, 512, 0, 0)\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spherical_to_cartesian(phi, theta):\n",
+    "    x = np.cos(theta) * np.cos(phi)\n",
+    "    y = np.cos(theta) * np.sin(phi)\n",
+    "    z = np.sin(theta)\n",
+    "    return x, y, z\n",
+    "\n",
+    "def rotate_coordinates(x, y, z, angle=np.pi/2):\n",
+    "    xx = x * np.cos(angle) + z * np.sin(angle)\n",
+    "    yy = y\n",
+    "    zz = -x * np.sin(angle) + z * np.cos(angle)\n",
+    "    return xx, yy, zz\n",
+    "\n",
+    "def cartesian_to_spherical(x, y, z):\n",
+    "    theta = np.arcsin(z)\n",
+    "    phi = np.arctan2(y, x)\n",
+    "    return phi, theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_coordinate(input_xy, image_size_hw):\n",
+    "    h, w = image_size_hw\n",
+    "    w_half = w / 2\n",
+    "    h_half = h / 2\n",
+    "    \n",
+    "    phi = (input_xy[0] - w_half) * np.pi * 2 /w\n",
+    "    theta = (input_xy[1] - h_half) * np.pi /h\n",
+    "    \n",
+    "    x, y, z = spherical_to_cartesian(phi, theta)\n",
+    "    xx, yy, zz = rotate_coordinates(x, y, z)\n",
+    "    new_phi, new_theta = cartesian_to_spherical(xx, yy, zz)\n",
+    "\n",
+    "    new_y = 2*new_theta * h_half / np.pi + h_half\n",
+    "    new_x = new_phi * w_half / np.pi + w_half\n",
+    "    \n",
+    "    return new_x, new_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6689710972195777 0.8812047495569755\n",
+      "0.6872233929727672 0.07584095748953572\n",
+      "(655.6140459704815, 268.3601543918407)\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_size = (512, 1024) \n",
+    "input_coord = (784, 368)\n",
+    "result = convert_coordinate(input_coord, image_size)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.141592653589793 -3.141592653589793\n",
+      "-1.5707963267948966 0.0\n",
+      "(0.0, 256.0)\n",
+      "3.141592653589793 2.0344439357957027\n",
+      "0.0 1.5707963267948966\n",
+      "(843.5628122370218, 512.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# テストケース2: 画像の一端 (0, 0)\n",
+    "input_coord = (0, 0)\n",
+    "result = convert_coordinate(input_coord, image_size)\n",
+    "print(result)\n",
+    "# テストケース3: 画像の他の端 (1600, 800)\n",
+    "input_coord = (1024, 256)\n",
+    "result = convert_coordinate(input_coord, image_size)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"./data/data_100/Room/0/O2.png\")\n",
+    "\n",
+    "# 点の位置\n",
+    "position = (784, 368)\n",
+    "position = (200, 308)\n",
+    "# 点の色（BGR形式）\n",
+    "color = (0, 0, 255)  # 緑色\n",
+    "\n",
+    "# 点を描画\n",
+    "cv2.drawMarker(img, position, color, markerType=cv2.MARKER_CROSS, markerSize=40, thickness=2, line_type=cv2.LINE_AA)\n",
+    "cv2.imshow('Image with a marker', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.9144080232812801 -1.2333506232875153\n",
+      "0.3190680038802134 0.3256095949097761\n"
+     ]
+    }
+   ],
+   "source": [
+    "img2 = cv2.imread(\"./data/data_100/Room/0/O.png\")\n",
+    "\n",
+    "# 点の位置\n",
+    "position2 = convert_coordinate(position, image_size)\n",
+    "position2 = (int(position2[0]), int(position2[1]))\n",
+    "\n",
+    "# 点の色（BGR形式）\n",
+    "color = (0, 0, 255)  # 緑色\n",
+    "\n",
+    "# 点を描画\n",
+    "cv2.drawMarker(img2, position2, color, markerType=cv2.MARKER_CROSS, markerSize=40, thickness=2, line_type=cv2.LINE_AA)\n",
+    "cv2.imshow('Image with a marker', img2)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(310, 309)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(position2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = cv2.imread(\"./O.png\")\n",
+    "h, w = img.shape[:2]\n",
+    "\n",
+    "w_half = int(w / 2)\n",
+    "h_half = int(h / 2)\n",
+    "\n",
+    "# メッシュグリッドの生成\n",
+    "phi, theta = np.meshgrid(np.linspace(-np.pi, np.pi, w_half*2),\n",
+    "                         np.linspace(-np.pi/2, np.pi/2, h_half*2))\n",
+    "\n",
+    "\n",
+    "# 球面座標\n",
+    "x = np.cos(theta) * np.cos(phi)\n",
+    "y = np.cos(theta) * np.sin(phi)\n",
+    "z = np.sin(theta)\n",
+    "\n",
+    "# z軸周りにπ/2ラジアン回転\n",
+    "rot = np.pi / 2\n",
+    "xx = x * np.cos(rot) + z * np.sin(rot)\n",
+    "yy = y\n",
+    "zz = -x * np.sin(rot) + z * np.cos(rot)\n",
+    "\n",
+    "# 逆球面座標変換\n",
+    "theta = np.arcsin(zz)\n",
+    "phi = np.arctan2(yy, xx)\n",
+    "\n",
+    "# 画像座標へのマッピング\n",
+    "Y = 2*theta / np.pi * h_half + h_half\n",
+    "X = phi / np.pi * w_half + w_half\n",
+    "\n",
+    "# 画像のリマッピングと保存\n",
+    "out = cv2.remap(img, X.astype(np.float32), Y.astype(np.float32), cv2.INTER_LINEAR, borderMode=cv2.BORDER_WRAP)\n",
+    "cv2.imwrite(\"dst.png\", out)"
    ]
   },
   {
