--- a/analysis/EDA_makesim.ipynb
+++ b/analysis/EDA_makesim.ipynb
@@ -325,9 +325,9 @@ method_idx = 0\n",
     "    print(\"image:\", t1-t0)\n",
     "    if opt != 'sphorb':\n",
     "        corners = tangent_image_corners(base_order, sample_order)\n",
-    "        pts1, desc1 = process_image_to_keypoints(path_o, corners, scale_factor, base_order, sample_order, opt, mode)\n",
+    "        pts1, desc1 = process_image_to_keypoints(path_o, scale_factor, base_order, sample_order, opt, mode)\n",
     "        print(descriptor, len(pts1))\n",
-    "        pts2, desc2 = process_image_to_keypoints(path_r, corners, scale_factor, base_order, sample_order, opt, mode)\n",
+    "        pts2, desc2 = process_image_to_keypoints(path_r, scale_factor, base_order, sample_order, opt, mode)\n",
     "        pts1[pts1[:,0] > img_o.shape[1], 0] -= img_o.shape[1]\n",
     "        pts2[pts2[:,0] > img_o.shape[1], 0] -= img_o.shape[1]\n",
     "    else:      \n",
